Update TypingToucan description with high-energy Adrenaline Seeker version

--- a/typing_toucan.html
+++ b/typing_toucan.html
@@ -94,8 +94,13 @@
 
         <section class="glass-panel">
             <h2>About the Game</h2>
-            <p>Typing Toucan is a progressive typing game where your keyboard skills keep you airborne. Avoid obstacles,
-                collect power-ups, and learn to type faster and more creating with every level.</p>
+            <h3>Flight, Flaps, and Fire Typing! 🦜✨</h3>
+            <p>Ready to take your typing from "meh" to "main character"? In <strong>Typing Toucan</strong>, your fingers
+                are the engine! Type to flap your way through a wild tropical jungle, dodging sky-high giraffes and
+                sneaky anacondas. Whether you're vibing in Practice Mode or pushing your WPM to the limit in
+                <strong>Insane Mode</strong>, every keystroke keeps you airborne. Unlock the whole keyboard, crush your
+                high scores, and prove you've got the fastest wings in the canopy. No cap—typing has never been this
+                lit.</p>
 
             <ul class="feature-list">
                 <li>Progressive difficulty levels</li>
