Refine TypingToucan description and update feature list

--- a/typing_toucan.html
+++ b/typing_toucan.html
@@ -99,13 +99,14 @@
                 are the engine! Type to flap your way through a wild tropical jungle, dodging sky-high giraffes and
                 sneaky anacondas. Whether you're vibing in Practice Mode or pushing your WPM to the limit in
                 <strong>Insane Mode</strong>, every keystroke keeps you airborne. Unlock the whole keyboard, crush your
-                high scores, and prove you've got the fastest wings in the canopy. No cap—typing has never been this
-                lit.</p>
+                high scores, and prove you've got the fastest wings in the canopy.
+            </p>
 
             <ul class="feature-list">
                 <li>Progressive difficulty levels</li>
+                <li>Adaptive learning mode that focuses on weaker letters</li>
                 <li>Engaging "flying-avian" mechanics</li>
-                <li>Track your WPM and accuracy</li>
+                <li>Track your streaks</li>
                 <li>Cross-platform support</li>
             </ul>
         </section>
