Add privacy policy page and update footers

--- a/typing_toucan.html
+++ b/typing_toucan.html
@@ -144,6 +144,7 @@
 
     <footer>
         <p>&copy; 2026 MinnowByte Software. All rights reserved.</p>
+        <p><a href="privacy.html">Privacy Policy</a></p>
         <p><a href="background_interactive.html">Click here to feed the fish!</a></p>
     </footer>
     <script src="particles.js"></script>
