--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
                     <img src="TypingToucanRound.png" alt="TypingToucan Icon" class="project-icon">
                     <div class="project-text-content">
                         <h3>Typing Toucan</h3>
-                        <p>A fast-paced typing adventure. Master your keyboard skills while navigating a neon jungle. Free and open-source.
+                        <p>A fast-paced typing adventure. Master your keyboard skills while navigating a neon jungle.
+                            Free and open-source.
                         </p>
                     </div>
                 </a>
@@ -68,6 +69,7 @@
 
     <footer>
         <p>&copy; 2026 MinnowByte Software. All rights reserved.</p>
+        <p><a href="privacy.html">Privacy Policy</a></p>
         <p><a href="background_interactive.html">Click here to feed the fish!</a></p>
     </footer>
     <script src="particles.js"></script>
