--- a/typing_toucan.html
+++ b/typing_toucan.html
@@ -128,7 +128,7 @@
                     <div class="download-icon">💻</div>
                     <h3>Windows</h3>
                     <p>Desktop Executable</p>
-                    <a href="https://github.com/BuffaloMtnBill/TypingToucan/releases" class="btn-download">Download .exe</a>
+                    <a href="https://github.com/BuffaloMtnBill/TypingToucan/releases/latest/download/TypingToucan.exe" class="btn-download">Download .exe</a>
                 </article>
 
                 <!-- Source Code -->
